<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jakedawkins.notes.EditNote"
    tools:showIn="@layout/activity_edit_note">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/zero"
        android:id="@+id/characterCount"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/enterTextContent"
        android:layout_below="@+id/characterCount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="256"
        android:hint="@string/textEntry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterTags"
        android:layout_below="@+id/enterTextContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="100"
        android:hint="@string/tagsEntry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/deleteButton"
        android:onClick="deleteNote"
        android:layout_below="@+id/enterTags"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ad0000"
        android:textColor="#f5f5f5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:onClick="saveNote"
        android:layout_below="@+id/deleteButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
